--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Edgar by HTML5</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,14 +28,13 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
+							<li><a href="index.html">Inicio</a></li>
+							<li><a href="landing.html">Sobre mí</a></li>
+							<li><a href="generic.html">Currículum</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<!--<li><a href="#" class="button fit">Log In</a></li>-->
 						</ul>
 					</nav>
 
@@ -43,13 +42,13 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Edgar</h1>
+								<h1>Hola, me llamo Edgar</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>created by edgar<br />
+								in html.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">Empezar</a></li>
 								</ul>
 							</div>
 						</div>
@@ -65,8 +64,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Lo Último</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Sobre mi</a></h3>
+										<p>Un poco sobre mi vida</p>
 									</header>
 								</article>
 								<article>
@@ -74,8 +73,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="generic.html" class="link">Currículum</a></h3>
+										<p>Ver mi currículum</p>
 									</header>
 								</article>
 								<article>
@@ -117,7 +116,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<!--<section id="two">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -127,11 +126,12 @@
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section>-->
 
-					</div>
+					</div><br><br>
 
 				<!-- Contact -->
+					<center><h2>CONTACTO</h2></center>
 					<section id="contact">
 						<div class="inner">
 							<section>
@@ -167,19 +167,17 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
+										<h3>Teléfono</h3>
+										<span>+34 615098758</span>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-home"></span>
 										<h3>Discord</h3>
 										<span>edgarqs#1919</span>
 									</div>
 								</section>
-								<section>
-									<!--<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										España</span>
-									</div>
-								</section>-->
 							</section>
 						</div>
 					</section>
