--- a/elements.html
+++ b/elements.html
@@ -458,9 +458,10 @@ print 'It took ' + i + ' iterations to sort the deck.';
 								</div>
 							</section>
 
-					</div>
+					</div><br><br>
 
 				<!-- Contact -->
+					<center><h2>CONTACTO</h2></center>
 					<section id="contact">
 						<div class="inner">
 							<section>
