--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Currículum - Edgar by HTML5</title>
+		<title>Currículum - Edgar in HTML5</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Edgar</strong> <span>by HTML5</span></a>
+						<a href="index.html" class="logo"><strong>Edgar</strong> <span>in HTML5</span></a>
 						<nav>
 							<a href="#menu">Menú</a>
 						</nav>
@@ -47,20 +47,38 @@
 									<header class="major">
 										<h1>Currículum</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<!--<span class="image main"><img src="images/pic11.jpg" alt="" /></span>-->
+									<h4>FORMACIÓN</h4>
+									<p>• CERTIFICADO DE PREVENCIÓN CONTRA COVID-19 - Asonaman (Noviembre 2020)</p>
+									<p>• EDUCACIÓN SECUNDARIA - Ramon Pont - Terrassa (2015-2020)</p>
+									<p>• CERTIFICADO MANIPULADOR DE ALIMENTOS - Asonaman (Abril 2020)</p>
+									<p>• CURSO JUEZ CRONOMETRADOR DE TAEKWONDO - Barcelona (Diciembre 2019)</p>
+									<br>
+
+									<h4>EXPERIENCIA</h4>
+									<p>• VOLUNTARIO EN ACAU - Terrassa (2020-Actualidad)
+										<br>Voluntario repartiendo alimentos y reponiendo estanterías.</p>
+									<p>• CAMARERO EN EL CAFETERO - Terrassa (2019)
+										<br>Ayudante de camarero en negocio familiar.</p>
+									<p>• VOLUNTARIO EN CASAL DE GENTE MAYOR - Terrassa (2018-2019)
+										<br>Organizar y hacer actividades con la gente mayor.</p>
+									<br>
+									
+									<h4>IDIOMAS</h4>
+									<p>• Catalan: Hablado y escrito nativamente.</p>
+									<p>• Castellano: Hablado y escrito nativamente.</p>
+									<p>• Inglés: Nivel básico.</p>
 								</div>
 							</section>
 
-					</div>
+					</div><br><br>
 
 				<!-- Contact -->
+					<center><h2>CONTACTO</h2></center>
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="mailto:edgar345.eq@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Nombre</label>
@@ -76,8 +94,8 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
+										<li><input type="submit" value="Enviar mensaje" class="primary" /></li>
+										<li><input type="reset" value="Borrar" /></li>
 									</ul>
 								</form>
 							</section>
