--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Edgar by HTML5</title>
+		<title>Edgar in HTML5</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Edgar</strong> <span>by HTML5</span></a>
+						<a href="index.html" class="logo"><strong>Edgar</strong> <span>in HTML5</span></a>
 						<nav>
 							<a href="#menu">Menú</a>
 						</nav>
@@ -31,7 +31,7 @@
 							<li><a href="index.html">Inicio</a></li>
 							<li><a href="landing.html">Sobre mí</a></li>
 							<li><a href="generic.html">Currículum</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<!--<li><a href="elements.html">Elements</a></li>-->
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -77,7 +77,7 @@
 										<p>Ver mi currículum</p>
 									</header>
 								</article>
-								<article>
+								<!--<article>
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
@@ -111,7 +111,7 @@
 									<header class="major">
 										<h3><a href="landing.html" class="link">Etiam</a></h3>
 										<p>Feugiat amet tempus</p>
-									</header>
+									</header>-->
 								</article>
 							</section>
 
@@ -135,7 +135,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="mailto:edgar345.eq@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Nombre</label>
@@ -186,11 +186,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/edgarqs_" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<!--<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+								<li><a href="https://www.instagram.com/edgarsito01/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/edgarqs" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/edgar-quirante-s%C3%A1nchez-21312a206/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; 2021</li><li>Design: <a href="">Edgar</a></li>
