--- a/landing.html
+++ b/landing.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Sobre mí - Edgar by HTML5</title>
+		<title>Sobre mí - Edgar in HTML5</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Edgar</strong> <span>by HTML5</span></a>
+						<a href="index.html" class="logo"><strong>Edgar</strong> <span>in HTML5</span></a>
 						<nav>
 							<a href="#menu">Menú</a>
 						</nav>
@@ -31,8 +31,8 @@
 						<ul class="links">
 							<li><a href="index.html">Inicio</a></li>
 							<li><a href="landing.html">Sobre mí</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">Currículum</a></li>
+							<!--<li><a href="elements.html">Elements</a></li>-->
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -72,21 +72,23 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="images/foto.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Currículum</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Curso un ciclo medio de Informática en el instituto Nicolau Copérnic en el turno de mañana. 
+												He tenido diversas experiencias como voluntario, de hecho actualmente soy voluntario en ACAU reponiendo estanterías y creando lotes de comida para las personas más necesitadas.
+												Esta experiencia ha podido desarrollar en mí la capacidad de trabajo en equipo, la organización y gestión, una buena capacidad de comunicación y diferentes habilidades como el uso de la transpaleta.</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Ir al currículum</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-								<section>
+								<!--<section>
 									<a href="generic.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
@@ -120,7 +122,6 @@
 								</section>
 							</section>
 
-						<!-- Three -->
 							<section id="three">
 								<div class="inner">
 									<header class="major">
@@ -131,15 +132,16 @@
 										<li><a href="generic.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section>-->
 
-					</div>
+					</div><br><br>
 
 				<!-- Contact -->
+					<center><h2>CONTACTO</h2></center>
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="mailto:edgar345.eq@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Nombre</label>
@@ -155,8 +157,8 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
+										<li><input type="submit" value="Enviar mensaje" class="primary" /></li>
+										<li><input type="reset" value="Borrar" /></li>
 									</ul>
 								</form>
 							</section>
@@ -190,11 +192,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/edgarqs_" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<!--<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+								<li><a href="https://www.instagram.com/edgarsito01/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/edgarqs" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/edgar-quirante-s%C3%A1nchez-21312a206/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; 2021</li><li>Design: <a href="">Edgar</a></li>
