--- a/landing.html
+++ b/landing.html
@@ -88,7 +88,7 @@
 										</div>
 									</div>
 								</section>
-								<section>
+								<!--<section>
 									<a href="generic.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
@@ -122,7 +122,6 @@
 								</section>
 							</section>
 
-						<!-- Three -->
 							<section id="three">
 								<div class="inner">
 									<header class="major">
@@ -133,7 +132,7 @@
 										<li><a href="generic.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section>-->
 
 					</div><br><br>
 
@@ -193,11 +192,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/edgarqs_" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<!--<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+								<li><a href="https://www.instagram.com/edgarsito01/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/edgarqs" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/edgar-quirante-s%C3%A1nchez-21312a206/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; 2021</li><li>Design: <a href="">Edgar</a></li>
