--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Currículum - Edgar in HTML5</title>
+		<title>💼 Currículum - Edgar</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Edgar</strong> <span>in HTML5</span></a>
+						<a href="index.html" class="logo"><strong>Edgar</strong> <span>Quirante</span></a>
 						<nav>
 							<a href="#menu">Menú</a>
 						</nav>
